# frankaArmMoveit

devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/: libmoveit_lerp_planner_plugin.so.0.1.0
devel/lib/moveit_tutorials/: bag_publisher_maintain_time  bullet_collision_checker_tutorial  collision_scene_example.py  detect_and_add_cylinder_collision_object_demo  lerp_example  motion_planning_api_tutorial  motion_planning_pipeline_tutorial  move_group_interface_tutorial  move_group_python_interface_tutorial.py  moveit_cpp_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  robot_model_and_robot_state_tutorial  ros_api_tutorial  state_display_tutorial  subframes_tutorial  trajopt_example  visualizing_collisions_tutorial
devel/lib/pick_place_tutorial/: pick_place
devel/lib/pkgconfig/: moveit_tutorials.pc  panda_moveit_config.pc  pick_place_tutorial.pc
devel/share/moveit_tutorials/cmake/: moveit_tutorialsConfig.cmake
devel/share/panda_moveit_config/cmake/: panda_moveit_configConfig.cmake
devel/share/pick_place_tutorial/cmake/: pick_place_tutorialConfig.cmake
src/pick_place_tutorial/: CMakeLists.txt
src/pick_place_tutorial/src/: pick_place.cpp
